test/files/neg/t5580a.check
t5580a.scala:9: error: polymorphic expression cannot be instantiated to expected type;
 found   : [A]<error>
 required: scala.collection.mutable.Map[bar,scala.collection.mutable.Set[bar]]
    if (map.get(tmp).isEmpty) map.put(tmp,collection.mutable.Set())
                                                                ^
one error found
